# geda-ai

./: #untitled_1.sch#  .gitignore  Makefile.am  NEWS  README  bootstrap.sh  confdefs.h  configure.ac  configure.ac.orig  configure.scan  configure_trace.txt  conftest.c  environment.yml  environment.yml.in  hello_trace.ac  stamp-h2  version.h.in
admin/: Makefile.am  README.md  geda-update-databases.sh
admin/docs/: Makefile.am  geda-update-databases.1
admin/tests/: Makefile.am  test_geda-update-databases.sh
contrib/scripts/: gnet_hier_verilog.1  pads_backannotate.1  sarlacc_sym.1  sw2asc.1
docs/: Makefile.am  gnetlist.1  gnetlist.html
docs/scheme-api/: geda-scheme.info
gaf/: Makefile.am
gaf/po/: it.po  nl.po  ru.po
gattrib/: Makefile.am
gattrib/docs/: Makefile.am
gattrib/po/: af.po  ar.po  bg.po  bs.po  ca.po  da.po  de.po  el.po  en_GB.po  es.po  fa.po  fr.po  gl.po  hu.po  it.po  ja.po  ml.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
gattrib/src/: parsecmd.c
gedai/: Makefile.am  chat_with_geda.py  main.py
gnetlist-legacy/: Makefile.am
gnetlist-legacy/docs/: Makefile.am
gnetlist-legacy/scheme/: gnet-drc2.scm  gnet-gsch2pcb.scm.in
gnetlist-legacy/src/: parsecmd.c
gschem/: Makefile.am
gschem/bitmap/: Makefile.am  bitmap_files.am  gschem-select.xpm
gschem/data/: Makefile.am
gschem/docs/: Makefile.am
gschem/include/: globals.h  gschem.h  gschem_action.h  gschem_defines.h  gschem_multiattrib_dockable.h  gschem_page_view.h  gschem_swatch_column_renderer.h  gschem_toplevel.h  prototype.h  x_window.h
gschem/po/: af.po  ar.po  bg.po  bs.po  de.po  el.po  en_GB.po  es.po  fa.po  fi.po  fr.po  he.po  hu.po  it.po  ja.po  ml.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sr.po  tr.po  zh_CN.po  zh_TW.po
gschem/scheme/: gschem-deprecated-config.scm
gschem/src/: .parsecmd.c.swp  g_keys.c  globals.c  gschem.c  gschem_accel_label.c  gschem_action.c  gschem_arc_dialog.c  gschem_bottom_widget.c  gschem_change_notification.c  gschem_close_confirmation_dialog.c  gschem_compselect_dockable.c  gschem_dialog.c  gschem_dockable.c  gschem_fill_swatch_cell_renderer.c  gschem_hotkey_dialog.c  gschem_multiattrib_dockable.c  gschem_page_view.c  gschem_patch_dockable.c  gschem_preview.c  gschem_slot_edit_dialog.c  gschem_swatch_column_renderer.c  o_basic.c  parsecmd.c  x_attribedit.c  x_autonumber.c  x_basic.c  x_color.c  x_controlfd.c  x_dialog.c  x_event.c  x_grid_size_sb.c  x_highlevel.c  x_image.c  x_menus.c  x_newtext.c  x_stroke.c  x_window.c  x_window.c.recover  x_window.c.sav
gsymcheck/: Makefile.am
gsymcheck/src/: parsecmd.c
libgeda/: Makefile.am  libgeda.pc.in
libgeda/data/: Makefile.am
libgedacairo/: Makefile.am
m4/: ax_geda_python_environment_check.m4  debug-macros.m4  geda-data-dirs.m4  geda-desktop.m4  geda-guile.m4  geda-macos.m4  geda-python.m4
po/: Makefile.am
symbols/documentation/: Makefile.am
xorn/: .gitignore  Makefile.am  configure.ac
xorn/built-packages/: gaf.py  xorn.py
xorn/doc/: guile-example.py
xorn/m4/: python3.m4
xorn/po/: POTFILES
xorn/src/backend/: Makefile.am  gnet_drc2.py  gnet_guile.py  gnet_protelII.py  gnet_systemc.py  gnet_vhdl.py  gnet_vipec.py  spice_common.py  util_getopt.py
xorn/src/command/: extract.py  find-symbol-by-pinout.py  gnetlist  gnetlist.in  gnetlistT  netlist.py  xorn  xorn.in  xorn.in.bak  xornT  xornT.bak
xorn/src/cpython/guile/: module.c  proc.c  py2scm.c  scm2py.c
xorn/src/cpython/guile/.libs/: guilemodule-symbols.expsym  guilemodule.exp  guilemodule.lai
xorn/src/cpython/storage/: Makefile.am  README.md  data_arc.c  include_c.m4  module.c  object.c  revision.c  selection.c
xorn/src/cpython/storage/.libs/: storagemodule-symbols.expsym  storagemodule.exp  storagemodule.lai
xorn/src/gaf/: clib.py  fileformat.py  plainread.py  plainwrite.py  xmlread.py  xmlwrite.py
xorn/src/gaf/netlist/: backend.py  conn.py  guile.py  net.py  netlist.py  netlist.py.orig  package.py  reportgui.py
xorn/src/python/: Makefile.am  base64.py  command.py  config.py  fileutils.py  fixednum.py  guile.py  hybridnum.py  storage.py  xml_writer.py
xorn/src/storage/: Makefile.am  convenience.cc
xorn/src/storage/.libs/: libxornstorage-symbols.expsym  libxornstorage.0.dylib  libxornstorage.dylib  libxornstorage.exp  libxornstorage.lai
xorn/tests/: Makefile.am
xorn/tests/cpython/: guile.py
xorn/tests/cpython/storage/: module.py
xorn/tests/gaf/: complex.py  pixmap.py  plain_transform.py  plainread_log.py  ripperdir.py  unhide_attrib.py  xmlread_log.py
xorn/tests/netlist/: JD-extras  TwoStageAmp-extras
xorn/tests/python/: base64.py  xml_writer.py
xorn/tests/storage/: copy_attached  copy_object  copy_objects  delete_sel  exist  get_attribute  get_location  get_obdata  get_objects  get_obtype  invalid_obtype  is_selected  multiple_assignments  normalize  null  pointer  query_attached  reloc_attach  reloc_order  select_by_attribute  selection  set_attribute  set_obdata  stat  string  transient  validate
xorn/tests/storage/.deps/: copy_attached.Po  copy_object.Po  copy_objects.Po  delete_sel.Po  exist.Po  get_attribute.Po  get_location.Po  get_obdata.Po  get_objects.Po  get_obtype.Po  invalid_obtype.Po  is_selected.Po  multiple_assignments.Po  normalize.Po  null.Po  pointer.Po  query_attached.Po  reloc_attach.Po  reloc_order.Po  select_by_attribute.Po  selection.Po  set_attribute.Po  set_obdata.Po  stat.Po  string.Po  transient.Po  validate.Po
xorn/tests/storage/.libs/: copy_attached  copy_object  copy_objects  delete_sel  exist  get_attribute  get_location  get_obdata  get_objects  get_obtype  invalid_obtype  is_selected  multiple_assignments  normalize  null  pointer  query_attached  reloc_attach  reloc_order  select_by_attribute  selection  set_attribute  set_obdata  stat  string  transient  validate
xorn/tests/storage/snippets/: example  functions  motivation
xorn/tests/storage/snippets/.deps/: example.Po  functions.Po  motivation.Po
xorn/tests/storage/snippets/.libs/: example  functions  motivation
(+30 files in other folders)
